# molgenis-fdp-harvester

./: .gitignore  README.md  mapping.md  pyproject.toml
molgenis-fdp-harvester/: pyproject.toml
molgenis-fdp-harvester/src/molgenis_fdp_harvester/: main.py
molgenis-fdp-harvester/src/molgenis_fdp_harvester/ckan_harvest/: baseharvester.py  baseparser.py  dcatap.py  dcatharvester.py  dcatrdfharvester.py  molgenis_dcat_profile.py  processor.py
molgenis-fdp-harvester/src/molgenis_fdp_harvester/ckanext-harvest/: baseparser.py
src/molgenis_fdp_harvester/: __about__.py  harvester.py  utils.py
src/molgenis_fdp_harvester/ckan_harvest/: baseharvester.py  baseparser.py  dcatapckan.py  dcatharvester.py  dcatrdfharvester.py  molgenis_dcat_profile.py  processor.py
tests/: __init__.py
