[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molgenis-fdp-harvester"
dynamic = ["version"]
description = 'This project contains a FAIR Data Point harvester for MOLGENIS.'
readme = "README.md"
requires-python = ">=3.8"
license = "AGPL-3.0-or-later"
keywords = []
authors = [{ name = "Mark Janse", email = "mark.janse@health-ri.nl" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["rdflib", "python-dateutil", "pandas", "geomet"]

[project.urls]
Documentation = "https://github.com/unknown/molgenis-fdp-harvester#readme"
Issues = "https://github.com/unknown/molgenis-fdp-harvester/issues"
Source = "https://github.com/unknown/molgenis-fdp-harvester"

[tool.hatch.version]
path = "src/molgenis_fdp_harvester/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/molgenis_fdp_harvester tests}"

[tool.coverage.run]
source_pkgs = ["molgenis_fdp_harvester", "tests"]
branch = true
parallel = true
omit = ["src/molgenis_fdp_harvester/__about__.py"]

[tool.coverage.paths]
molgenis_fdp_harvester = [
  "src/molgenis_fdp_harvester",
  "*/molgenis-fdp-harvester/src/molgenis_fdp_harvester",
]
tests = ["tests", "*/molgenis-fdp-harvester/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
